<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data class=".TransitBinding">
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
    </data>
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/slide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slide"
            android:onClick="@{clickListener}"
            android:layout_margin="24dp"
            />

        <Button
            android:id="@+id/fade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fade"
            android:onClick="@{clickListener}"
            android:layout_margin="24dp"
            />

        <Button
            android:id="@+id/explode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explode"
            android:onClick="@{clickListener}"
            android:layout_margin="24dp"
            />
    </LinearLayout>
</layout>
